--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "dashjs": "^5.1.0",
     "hls.js": "^1.6.15",
-    "next": "15.5.2",
+    "next": "^15.5.7",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.4.0"
