fix: regenerate lockfile and fix vulnerabilities

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,28 @@
-# TitikBola Environment Configuration
-
-# Supabase Configuration
+# ========== SUPABASE CONFIG ==========
 NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
-# Admin Credentials
-NEXT_PUBLIC_ADMIN_USERNAME=admin
-NEXT_PUBLIC_ADMIN_PASSWORD=your-secure-password
+# Server-side Supabase (service role) - keep this secret
+SUPABASE_URL=https://your-supabase-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
-# Token Secret (gunakan string random yang kuat)
-NEXT_PUBLIC_TOKEN_SECRET=your-secret-key-for-token-generation
+# ========== CLOUDFLARE WORKER URL ==========
+NEXT_PUBLIC_WORKER_URL=https://streaming-proxy-worker.example.workers.dev
 
-# Worker URL (untuk Cloudflare Worker, optional)
-NEXT_PUBLIC_WORKER_URL=https://your-worker.workers.dev
+# ========== TOKEN SECRET (MUST BE SAME AS WORKER!) ==========
+# Use a strong random string for production
+TOKEN_SECRET_KEY=your_worker_token_secret_here
+NEXT_PUBLIC_TOKEN_SECRET=your_worker_token_secret_here
 
-# Node Environment
-NODE_ENV=production
+# ========== ADMIN CREDENTIALS ==========
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=change_me
+
+# ========== RATE LIMIT (optional) ==========
+# Requests per IP per minute for worker stream endpoints
+RATE_LIMIT_PER_MINUTE=120
+
+# ========== NOTES ==========
+# 1. File ini JANGAN di-commit ke Git! (sudah ada di .gitignore)
+# 2. Untuk production, set environment variables in hosting dashboards (Cloudflare / Vercel / Netlify)
+# 3. Keep `SUPABASE_SERVICE_ROLE_KEY` and `TOKEN_SECRET_KEY` secret and only available to server-side code
