--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:p2p": "node ./scripts/test-p2p-utils.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.0",
